--- a/style.css
+++ b/style.css
@@ -207,6 +207,9 @@ body {
       display: block;
     }
   }
+.yeab{
+  height:100px;
+}
   
   /* Hide the default nav links on mobile */
   @media (max-width: 768px) {
