--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
     padding-right: 20px;
     height: 80vh;
     border-bottom-left-radius: 40px; /* Rounded bottom-left corner */
+    background-image: url('images/your-background.jpg'); /* change to your image path */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
   
   nav {
