--- a/style.css
+++ b/style.css
@@ -740,6 +740,10 @@ body {
     text-align: center;
     max-width: 100%;
     border-top-left-radius: 90px;
+    background-image: url('images/contact bg.jpg'); 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
   
   .contact-content {
